# dada-tbd-doom

./: .dockerignore  .gitignore  .gitmodules  AUDIO_BRIDGE.md  DITHERING.md  Dockerfile  LICENSE  README.md  TECHNICAL.md  append_wad_uf2.py  compare_uf2.py  doom_build.py  extract_fw.py  flash.sh  gen_all_luts.py  gen_blue_noise2.py  partition_table.json  pinmap.md  platformio.ini  serial_capture.py  spi-hardware-inventory.md
docs/: AUDIO_AUDIT.md  AUDIO_BRIDGE.md  MANUAL.md  PORTING_ZEPTOCORE.md  SPI_INVENTORY.md  SPI_LIBRARY.md  SPI_TRANSPORT.md  TBD16_AUDIO_DRIVER.md  TECHNICAL.md  TEMPORAL_DITHERING_REVIEW.md  VIDEO_PIPELINE.md  button-mapping.md  tbd-pico-seq3-spi-transport-complete.md
examples/: main.cpp
src/: DadaLogo.h  Midi.cpp  Midi.h  MidiParser.cpp  MidiParser.h  MidiRunningStatusExpander.h  SpiAPI.cpp  SpiAPI.h  SpiProtocol.h  Ui.cpp  Ui.h  config.h  doom_stub.c  hw_config.c  i_picosound.c  i_picosound_stub.c  p4_control_link.c  p4_control_link.h  p4_spi_transport.c  p4_spi_transport.h  pico_audio_bridge.c  pico_audio_bridge.h  pico_audio_i2s_shim.c  pio_spi_oled.c  pio_spi_oled.h  pio_spi_oled.pio  pio_spi_oled.pio.h  psram_init.c  sd_wad_loader.c  src.ino
tbd16-pico-audio/: CMakeLists.txt  HARDWARE.md  README.md  pico_audio_i2s_compat.c  tbd16_audio.c  tbd16_audio.h
tbd16-pico-audio/pico/: audio_i2s.h
tools/: analyze_audio.py  analyze_isr.py  analyze_rates.py  analyze_test_tones.py  block_phase.py  build-doom.sh  check_uf2.py  click_detail.py  compare_boot.py  cycle_count.py  diagnose_recording.py  flash_and_capture.py  gen_blue_noise.py  (+9 more)
(+36 files in other folders)
